# book-video-player

./: .gitignore  .runid  Data.md  README.en.md  README.md  README_AI.md  cdp_eval.py  history.md  package-lock.json  package.json
.agents/: AGENTS.md
.github/workflows/: release.yml
docs/: en.html  index.html
src-tauri/: Cargo.toml  overlay.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
